#175 Add dashboard for burst periods

--- a/server/dashboard/templates/dashboard/participants.html
+++ b/server/dashboard/templates/dashboard/participants.html
@@ -10,4 +10,5 @@
 <a href="{% url 'dashboard-cohort-data-summary' cohort.id %}" class="nav-link">Data Summary</a>
 <a href="{% url 'dashboard-cohort-download' cohort.id %}" class="nav-link">Download</a>
 <a href="{% url 'dashboard-cohort-closeout-summary' cohort.id %}" class="nav-link">Closeout Summary</a>
+<a href="{% url 'dashboard-cohort-burst-periods' cohort.id %}" class="nav-link">Burst Periods</a>
 {% endblock %}
