Add cohort level dashboard to audit daily tasks

--- a/server/dashboard/templates/dashboard/participants.html
+++ b/server/dashboard/templates/dashboard/participants.html
@@ -11,4 +11,5 @@
 <a href="{% url 'dashboard-cohort-download' cohort.id %}" class="nav-link">Download</a>
 <a href="{% url 'dashboard-cohort-closeout-summary' cohort.id %}" class="nav-link">Closeout Summary</a>
 <a href="{% url 'dashboard-cohort-burst-periods' cohort.id %}" class="nav-link">Burst Periods</a>
+<a href="{% url 'dashboard-cohort-daily-tasks' cohort.id %}" class="nav-link">Daily Tasks</a>
 {% endblock %}
