Add create, update, and delete views for burst periods

--- a/server/dashboard/templates/dashboard/participant.html
+++ b/server/dashboard/templates/dashboard/participant.html
@@ -143,9 +143,14 @@
 {% if burst_configuration.burst_periods %}
 <ul>
 {% for burst_period in burst_configuration.burst_periods %}
-    <li>{{burst_period.start}} to {{burst_period.end}}</li>
+    <li>
+        {{burst_period.start}} to {{burst_period.end}}
+        {% url 'dashboard-cohort-participant-burst-period' cohort.id participant.heartsteps_id burst_period.id as bp_url %}
+        <a href="{{bp_url}}">Edit</a>
+    </li>
 {% endfor %}
 </ul>
 {% endif %}
+<a href="{% url 'dashboard-cohort-participant-burst-period' cohort.id participant.heartsteps_id %}">Create burst period</a>
 {% endif %}
 {% endblock %}
