Quick morning messages dashboard

--- a/server/dashboard/templates/dashboard/participants.html
+++ b/server/dashboard/templates/dashboard/participants.html
@@ -12,4 +12,5 @@
 <a href="{% url 'dashboard-cohort-closeout-summary' cohort.id %}" class="nav-link">Closeout Summary</a>
 <a href="{% url 'dashboard-cohort-burst-periods' cohort.id %}" class="nav-link">Burst Periods</a>
 <a href="{% url 'dashboard-cohort-daily-tasks' cohort.id %}" class="nav-link">Daily Tasks</a>
+<a href="{% url 'dashboard-cohort-morning-messages' cohort.id %}" class="nav-link">Morning Messages</a>
 {% endblock %}
