--- a/server/dashboard/templates/dashboard/burst-period-summary.html
+++ b/server/dashboard/templates/dashboard/burst-period-summary.html
@@ -1,6 +1,7 @@
 {% extends 'dashboard/base.html' %}
 {% load static %}
 {% load template_filters %}
+{% load tz %}
 
 {% block navigation %}
 <a href="{% url 'dashboard-cohort-participants' cohort.id %}" class="nav-link">{{cohort.name}}</a>
@@ -8,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+{% localtime off %}
 {{availability}}
 <h2>Burst Periods for {{cohort.name}}</h2>
 
@@ -60,17 +62,44 @@
                 </dl>
             </td>
             <td>
+                {% if participant.walking_suggestion_survey_configuration %}
+                {% with configuration=participant.walking_suggestion_survey_configuration %}
                 <dl>
+                    <dt>Status</dt>
+                    {% if configuration.enabled %}
+                    <dd>Enabled</dd>
+                    {% else %}
+                    <dd>Disabled</dd>
+                    {% endif %}
+                    <dt>Last Randomization</dt>
+                    {% if configuration.last_decision %}
+                    <dd>
+                        {% if configuration.last_decision.treated %}Treated{% else %}Not Treated{% endif %}
+                        ({{configuration.last_decision.treatment_probability}})
+                    </dd>
+                    {% else %}
+                    <dd>No randomization decisions made</dd>
+                    {% endif %}
                     <dt>Last Walking Suggestion Survey</dt>
-                    <dd>Sent on</dd>
-                    <dd>Received on</dd>
-                    <dd>Opened on</dd>
-                    <dd>Completed on and completed fully</dd>
+                    {% if configuration.last_survey %}
+                    {% if configuration.last_survey_answered_datetime %}
+                    <dd>Answered at {{configuration.last_survey_answered_datetime|date:"SHORT_DATETIME_FORMAT"}}</dd>
+                    {% else %}
+                    <dd>Not answered. Sent at {{configuration.last_survey_sent_datetime|date:"SHORT_DATETIME_FORMAT"}}</dd>
+                    {% endif %}
+                    {% else %}
+                    <dd>No walking suggestion surveys</dd>
+                    {% endif %}
+                    {% if configuration.last_answered_survey_datetime and configuration.last_answered_survey_datetime != configuration.last_survey_answered_datetime %}
+                    <dd>Last answered survey at {{configuration.last_answered_survey_datetime|date:"SHORT_DATETIME_FORMAT"}}</dd>
+                    {% endif %}
                 </dl>
+                {% endwith %}
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
-
+{% endlocaltime %}
 {% endblock %}
