Created dev-generic, create debug-table, clear debug-table

--- a/server/dashboard/templates/dashboard/dev-front.html
+++ b/server/dashboard/templates/dashboard/dev-front.html
@@ -17,6 +17,31 @@
             <button type="submit" class="btn btn-primary mb-2">Send</button>
         </form>
     </li>
+
+    <li>
+        <form class="form-inline" action="{% url 'dashboard-dev-create-study' %}" method="POST" role="form">
+            {% csrf_token %}
+            <div class="form-group mb-2">
+                Create N studies with random names.
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <input type="text" class="form-control" id="number_of_studies" name="number_of_studies" placeholder="ex) 10">
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Create</button>
+        </form>
+    </li>
+
+    <li>
+        <form class="form-inline" action="{% url 'dashboard-dev-generic' %}" method="POST" role="form">
+            {% csrf_token %}
+            <div class="form-group mb-2">
+                Clear all debug studies.
+            </div>
+            <input type="hidden" id="dev-command" value="clear-debug-study" name="dev-command" />
+            <button type="submit" class="btn btn-primary mb-2">Clear</button>
+        </form>
+    </li>
+
 </ul>
 
 
